[package]
edition = "2021"
name = "native-launcher"
version = "0.1.0"
workspace = "../.."

[dependencies]
bevy_jam_game = { package = "bevy_jam_game", path = "../.." }

bevy = { version = "0.8", default-features = false, features = ["bevy_asset", "bevy_winit", "render", "png", "x11"] }

# Image
image = "~0.24"
winit = "~0.26"
